<resources>
    <string name="app_name">izi quiz!</string>
    <string name="optionsButtonText">Opções</string>
    <string name="splashMenuPlayButtonText">Jogar!</string>
    <string name="popUpConfirmation">Sim!</string>
    <string name="popUpNegation">Não!</string>
    <string name="leaveGameConfirmation">Gostaria de sair do izi quiz!?</string>
    <string name="leaveMatchConfirmation">Gostaria de sair da partida?</string>
    <string name="MainMenuPlayButtonText">Iniciar partida!</string>
    <string name="JoinRoomButtonText">Entrar em sala</string>
    <string name="CreateRoomButtonText">Criar nova sala</string>
    <string name="startMatchTitleText">Agora, escolha como você quer iniciar uma partida no izi quiz!</string>
    <string name="createRoomInstructionsText">Para seus amigos entrarem nessa sala, peça para que coloquem o mesmo código abaixo!</string>
    <string name="joinRoomInstructionsText">Para entrar na sala de seus amigos, coloque o mesmo código escrito na sala deles abaixo!</string>
    <string name="joinRoomCodeInputHintText">Código</string>
    <string name="joinRoomJoinButtonText">Entrar</string>
    <string name="NameInputHintText">Nome</string>
    <string name="startMatchInsertNameInstructionText">Escreva como quer ser reconhecido nas partidas!</string>
    <string name="createRoomStartMatchText">Começar!</string>
    <string name="questionThemeTitleText">Vote no tema da Pergunta!</string>
    <string name="powerUpChoiceThemeTitleText">Escolha o power up!</string>
    <string name="powerUpPlayerChoiceText">Agora, em quem usar?</string>
</resources>
