<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundFadeGray">

    <TextView
        android:id="@+id/popUpLeaveMatchContainer"
        android:text="@string/leaveMatchConfirmation"
        style="@style/popUpContainer" />

    <Button
        android:id="@+id/popUpLeaveMatchConfirmation"
        android:text="@string/popUpConfirmation"
        android:layout_alignBottom="@+id/popUpLeaveMatchContainer"
        android:layout_alignStart="@+id/popUpLeaveMatchContainer"
        style="@style/popUpConfirmationButton" />

    <Button
        android:id="@+id/popUpLeaveMatchNegation"
        android:text="@string/popUpNegation"
        android:layout_alignBottom="@+id/popUpLeaveMatchContainer"
        android:layout_alignEnd="@+id/popUpLeaveMatchContainer"
        style="@style/popUpNegationButton" />

</RelativeLayout>