<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundFadeGray">

    <TextView
        android:id="@+id/popUpLeaveGameContainer"
        android:text="@string/leaveGameConfirmation"
        style="@style/popUpContainer" />

    <Button
        android:id="@+id/popUpLeaveGameConfirmation"
        android:text="@string/popUpConfirmation"
        android:layout_alignBottom="@+id/popUpLeaveGameContainer"
        android:layout_alignStart="@+id/popUpLeaveGameContainer"
        android:onClick="leaveApplication"
        style="@style/popUpConfirmationButton" />

    <Button
        android:id="@+id/popUpLeaveGameNegation"
        android:text="@string/popUpNegation"
        android:layout_alignBottom="@+id/popUpLeaveGameContainer"
        android:layout_alignEnd="@+id/popUpLeaveGameContainer"
        android:onClick="remainOnApplication"
        style="@style/popUpNegationButton" />


</RelativeLayout>