<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/startMatchBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_button_back"
        android:onClick="goToMainMenuFragment"/>

    <ImageButton
        android:id="@+id/startMatchOptionsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_button_options"
        android:onClick="openOptionsModal"/>

    <TextView
        android:id="@+id/startMatchTitleText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/startMatchTitleText"
        style="@style/iziThemeText"/>

    <Button
        android:id="@+id/startMatchCreateRoomButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/startMatchTitleText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_button_background_striped"
        android:textAllCaps="false"
        android:text="@string/CreateRoomButtonText"
        android:onClick="goToCreateRoomFragment"
        style="@style/iziThemeText" />

    <Button
        android:id="@+id/startMatchJoinRoomButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/startMatchCreateRoomButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_button_background_striped"
        android:textAllCaps="false"
        android:text="@string/JoinRoomButtonText"
        android:onClick="goToJoinRoomFragment"
        style="@style/iziThemeText"/>


</RelativeLayout>