<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/joinRoomFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/joinRoomBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_button_back"
        android:onClick="goToStartMatchFragment"/>

    <ImageButton
        android:id="@+id/joinRoomOptionsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_button_options"
        android:onClick="openOptionsModal"/>

    <TextView
        android:id="@+id/joinRoomInstructions"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="175dp"
        android:text="@string/joinRoomInstructionsText"
        style="@style/iziThemeText"/>

    <ImageView
        android:id="@+id/joinRoomCodeInputBackground"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/joinRoomInstructions"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_history_background"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/joinRoomCodeInput"
        style="@style/iziThemeText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/joinRoomCodeInputBackground"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/joinRoomCodeInputHintText"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColorHint="#7fffffff"
        android:textColorLink="@android:color/transparent" />

    <Button
        android:id="@+id/joinRoomJoinMatchButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/joinRoomCodeInputBackground"
        android:text="@string/joinRoomJoinButtonText"
        android:onClick="joinRoom"
        style="@style/MenuButton" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>